--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Build-Depends: debhelper (>= 9),
                libegl1-mesa-dev,
                libfontconfig1-dev,
                libglib2.0-dev,
-               libmtdev-dev,
-               libudev-dev,
+               libmtdev-dev [linux-any],
+               libudev-dev [linux-any],
                libwayland-dev (>= 1.2.0),
                libwayland-egl1-mesa | libwayland-egl1,
                libxkbcommon-dev (>= 0.2.0),
