Add build-dependencies on libinput-dev and libxcomposite-dev.

--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,12 @@ Build-Depends: debhelper (>= 9),
                libegl1-mesa-dev,
                libfontconfig1-dev,
                libglib2.0-dev,
+               libinput-dev,
                libmtdev-dev [linux-any],
                libudev-dev [linux-any],
                libwayland-dev (>= 1.4.0),
                libwayland-egl1-mesa | libwayland-egl1,
+               libxcomposite-dev,
                libxkbcommon-dev (>= 0.2.0),
                libxrender-dev,
                pkg-config,
