--- a/debian/control
+++ b/debian/control
@@ -25,8 +25,8 @@ Build-Depends: debhelper (>= 9),
                qtbase5-private-dev (>= 5.6.0+dfsg~)
 Standards-Version: 3.9.6
 Homepage: http://qt-project.org/
-Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtwayland.git
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/qt/qtwayland.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtwayland.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtwayland.git
 
 Package: libqt5waylandclient5
 Architecture: any
