--- a/debian/rules
+++ b/debian/rules
@@ -21,9 +21,7 @@ override_dh_auto_install:
 
 	# Remove libtool-like file
 	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libQt5WaylandClient.la
-
-	# Remove a lonely example .pro file, there is no matching code for it.
-	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/examples/wayland/wayland.pro
+	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libQt5WaylandCompositor.la
 
 override_dh_install:
 	dh_install --fail-missing
