--- a/debian/rules
+++ b/debian/rules
@@ -23,5 +23,14 @@ override_dh_auto_install:
 	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libQt5WaylandClient.la
 	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libQt5WaylandCompositor.la
 
+	# Remove private elements.
+	# Not used at the time of writing according to codesarch.debian (June 2016)
+	rm -rvf debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/qt5/QtWaylandClient/*/QtWaylandClient/private
+	rm -rvf debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/qt5/QtWaylandCompositor/*/QtWaylandCompositor/private
+	rm -fv debian/tmp/usr/lib/*/qt5/mkspecs/modules/qt_lib_*_private.pri
+
+	# Hack away weird defunct artifact created by build.
+	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/Qt5Gui/Qt5Gui_.cmake
+
 override_dh_install:
 	dh_install --fail-missing
