delete correct path

--- a/debian/rules
+++ b/debian/rules
@@ -30,7 +30,7 @@ override_dh_auto_install:
 	rm -fv debian/tmp/usr/lib/*/qt5/mkspecs/modules/qt_lib_*_private.pri
 
 	# Hack away weird defunct artifact created by build.
-	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/Qt5Gui/Qt5Gui_.cmake
+	rm -vf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/cmake/Qt5Gui/Qt5Gui_.cmake
 
 override_dh_install:
 	dh_install --fail-missing
