--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,13 @@ export QT_SELECT := qt5
 override_dh_auto_configure:
 	qmake
 
-override_dh_auto_install:
+override_dh_auto_build-indep:
+	dh_auto_build -- docs
+
+override_dh_auto_install-indep:
+	dh_auto_build -- INSTALL_ROOT=$(CURDIR)/debian/tmp install_docs
+
+override_dh_auto_install-arch:
 	dh_auto_install
 
 	# Remove libtool-like file
