--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends: debhelper (>= 9.20160114~),
                pkg-config,
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.7.0+dfsg~),
-               qtdeclarative5-private-dev (>= 5.7.0+dfsg~)
+               qtdeclarative5-private-dev (>= 5.7.0~)
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.7.0+dfsg~),
                      qtbase5-doc-html (>= 5.7.0+dfsg~),
                      qttools5-dev-tools (>= 5.7.0~)
