--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Architecture: any
 Multi-Arch: same
 Section: x11
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: qml-module-qtwayland-compositor, ${misc:Depends}, ${shlibs:Depends}
 Description: Qt 5 Wayland examples
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
