--- a/debian/control
+++ b/debian/control
@@ -82,6 +82,9 @@ Description: QtWayland compositor development files
  .
  This package contains the development files for QtWayland compositor
  library.
+ .
+ This library is a tech preview and the API will change before the final
+ release. Use at your own risk.
 
 Package: qtwayland5
 Architecture: any
