--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Build-Depends: debhelper (>= 9.20160114~),
                libxrender-dev,
                pkg-config,
                pkg-kde-tools,
+               qtbase5-dev (>= 5.7.0+dfsg~),
                qtbase5-private-dev (>= 5.7.0+dfsg~),
                qtdeclarative5-private-dev (>= 5.7.0~)
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.7.0+dfsg~),
