--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Uploaders: Dmitry Shachnev <mitya57@debian.org>,
            Pino Toscano <pino@debian.org>,
            Timo Jyrinki <timo@debian.org>
 Build-Depends: debhelper (>= 9.20160114~),
+               dpkg-dev (>= 1.17.14),
                libegl1-mesa-dev,
                libfontconfig1-dev,
                libglib2.0-dev,
@@ -24,9 +25,9 @@ Build-Depends: debhelper (>= 9.20160114~),
                qtbase5-dev (>= 5.9.0+dfsg~),
                qtbase5-private-dev (>= 5.9.0+dfsg~),
                qtdeclarative5-private-dev (>= 5.9.0~)
-Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.0+dfsg~),
-                     qtbase5-doc-html (>= 5.9.0+dfsg~),
-                     qttools5-dev-tools (>= 5.9.0~)
+Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.0+dfsg~) <!nodoc>,
+                     qtbase5-doc-html (>= 5.9.0+dfsg~) <!nodoc>,
+                     qttools5-dev-tools (>= 5.9.0~) <!nodoc>
 Standards-Version: 3.9.8
 Homepage: http://qt-project.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtwayland.git
@@ -99,6 +100,7 @@ Description: QtWayland platform plugin
  binary.
 
 Package: qtwayland5-doc
+Build-Profiles: <!nodoc>
 Priority: extra
 Architecture: all
 Section: doc
@@ -111,6 +113,7 @@ Description: Qt 5 Wayland Compositor documentation
  library.
 
 Package: qtwayland5-doc-html
+Build-Profiles: <!nodoc>
 Priority: extra
 Architecture: all
 Section: doc
