--- a/debian/control
+++ b/debian/control
@@ -23,11 +23,11 @@ Build-Depends: debhelper (>= 10.3),
                pkg-config,
                pkg-kde-tools,
                qtbase5-dev (>= 5.9.2+dfsg~),
-               qtbase5-private-dev (>= 5.9.2+dfsg~),
+               qtbase5-private-dev (>= 5.9.2+dfsg-3~),
                qtdeclarative5-private-dev (>= 5.9.2~)
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.2+dfsg~) <!nodoc>,
                      qtbase5-doc-html (>= 5.9.2+dfsg~) <!nodoc>,
-                     qttools5-dev-tools (>= 5.9.2~) <!nodoc>
+                     qttools5-dev-tools (>= 5.9.2-2~) <!nodoc>
 Standards-Version: 4.1.1
 Homepage: http://qt-project.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtwayland.git
