Fix cross building failures.
- Build and use native version of qtwaylandscanner.
- Set QMAKE_QMAKE and PKG_CONFIG_LIBDIR variables.

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: debhelper (>= 10.9.2~),
                pkg-config,
                pkg-kde-tools,
                qtbase5-dev (>= 5.9.2+dfsg~),
+               qtbase5-dev:native (>= 5.9.2+dfsg~),
                qtbase5-private-dev (>= 5.9.2+dfsg-3~),
                qtdeclarative5-private-dev (>= 5.9.2~)
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.2+dfsg~) <!nodoc>,
