--- a/debian/control
+++ b/debian/control
@@ -22,13 +22,12 @@ Build-Depends: debhelper (>= 10.9.2~),
                libxrender-dev,
                pkg-config,
                pkg-kde-tools,
-               qtbase5-dev (>= 5.9.2+dfsg~),
-               qtbase5-dev:native (>= 5.9.2+dfsg~),
-               qtbase5-private-dev (>= 5.9.2+dfsg-3~),
-               qtdeclarative5-private-dev (>= 5.9.2~)
-Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.2+dfsg~) <!nodoc>,
-                     qtbase5-doc-html (>= 5.9.2+dfsg~) <!nodoc>,
-                     qttools5-dev-tools (>= 5.9.2-2~) <!nodoc>
+               qtbase5-dev (>= 5.10.1+dfsg~),
+               qtbase5-dev:native (>= 5.10.1+dfsg~),
+               qtbase5-private-dev (>= 5.10.1+dfsg~),
+               qtdeclarative5-private-dev (>= 5.10.1~)
+Build-Depends-Indep: qtbase5-doc-html (>= 5.10.1+dfsg~) <!nodoc>,
+                     qttools5-dev-tools (>= 5.10.1~) <!nodoc>
 Standards-Version: 4.1.1
 Homepage: http://qt-project.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtwayland.git
