--- a/debian/control
+++ b/debian/control
@@ -30,8 +30,8 @@ Build-Depends-Indep: qtbase5-doc-html (>= 5.10.1+dfsg~) <!nodoc>,
                      qttools5-dev-tools (>= 5.10.1~) <!nodoc>
 Standards-Version: 4.1.1
 Homepage: http://qt-project.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtwayland.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtwayland.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtwayland.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtwayland
 
 Package: qtwayland5-examples
 Architecture: any
