Generate libqt5waylandclient5-dev.

--- a/debian/control
+++ b/debian/control
@@ -85,6 +85,18 @@ Description: QtWayland compositor development files
  This package contains the development files for QtWayland compositor
  library.
 
+Package: libqt5waylandclient5-dev
+Architecture: any
+Section: libdevel
+Multi-Arch: same
+Depends: libqt5waylandclient5 (= ${binary:Version}), ${misc:Depends}
+Recommends: qtwayland5-dev-tools
+Description: QtWayland client development files
+ QtWayland is a Qt 5 module that wraps the functionality of Wayland.
+ .
+ This package contains the development files for QtWayland client
+ library.
+
 Package: qtwayland5-dev-tools
 Architecture: any
 Multi-Arch: foreign
