--- a/debian/control
+++ b/debian/control
@@ -81,7 +81,9 @@ Package: libqt5waylandcompositor5-dev
 Architecture: any
 Section: libdevel
 Multi-Arch: same
-Depends: libqt5waylandcompositor5 (= ${binary:Version}), ${misc:Depends}
+Depends: libqt5waylandcompositor5 (= ${binary:Version}),
+         qtwayland5 (= ${binary:Version}),
+         ${misc:Depends}
 Description: QtWayland compositor development files
  QtWayland is a Qt 5 module that wraps the functionality of Wayland.
  .
