--- a/debian/control
+++ b/debian/control
@@ -94,7 +94,9 @@ Package: libqt5waylandclient5-dev
 Architecture: any
 Section: libdevel
 Multi-Arch: same
-Depends: libqt5waylandclient5 (= ${binary:Version}), ${misc:Depends}
+Depends: libqt5waylandclient5 (= ${binary:Version}),
+         qtwayland5 (= ${binary:Version}),
+         ${misc:Depends}
 Recommends: qtwayland5-dev-tools
 Description: QtWayland client development files
  QtWayland is a Qt 5 module that wraps the functionality of Wayland.
