--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Dmitry Shachnev <mitya57@debian.org>,
            Sune Vuorela <debian@pusling.com>,
            Pino Toscano <pino@debian.org>,
            Timo Jyrinki <timo@debian.org>,
-           Simon Quigley <tsimonq2@ubuntu.com>
+           Simon Quigley <tsimonq2@debian.org>
 Build-Depends: debhelper (>= 11~),
                dpkg-dev (>= 1.17.14),
                libegl1-mesa-dev,
